--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,21 @@
 }
 
 .infoBox{
+    font-family: "Trebuchet MS",Arial,sans-serif;
+    font-size: 12px;
     position:absolute;   
     z-index: 3;
-    width:200px;
+    width:auto;
     background-color: grey;margin-top:300px;
     margin-left:300px;
-    height: 200px;
+    height: auto;
     padding: 10px;
     color: #fff;
+    
+}
+.overskrift{
+    color: #fff;
+    font-size: 18px;
     
 }
 
